--- a/css/testimonios.css
+++ b/css/testimonios.css
@@ -1,4 +1,4 @@
-.testimonio-title{
+.testimonio-title {
     -webkit-background-clip: text;
     background-image: linear-gradient(to right, var(--verde), var(--naranja));
     -webkit-text-fill-color: transparent;
@@ -8,94 +8,105 @@
     font-weight: 900;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom:40px;
-    padding-top:40px;
+    margin-bottom: 40px;
+    padding-top: 40px;
 }
+
+.testimonial-meta {
+    margin-bottom: 20px;
+}
+
+.testimonial-job-title {
+    font-size: 13px;
+    line-height: 10px;
+    color: #08586b;
+    font-style: italic;
+    /* margin-bottom: 20px; */
+}
+
 .testimonials-clean {
-    color:#313437;
-    background-color:#eef4f7;
-  }
-  
-  .testimonials-clean p {
-    color:#7d8285;
-  }
-  
-  @media (max-width:767px) {
+    color: #313437;
+    background-color: #eef4f7;
+}
+
+.testimonials-clean p {
+    color: #7d8285;
+}
+
+@media (max-width:767px) {
     .testimonio-title {
-      margin-bottom:25px;
-      padding-top:25px;
-      font-size:24px;
+        margin-bottom: 25px;
+        padding-top: 25px;
+        font-size: 24px;
     }
-  }
-  
-  .testimonials-clean .intro {
-    font-size:16px;
-    max-width:500px;
-    margin:0 auto;
-  }
-  
-  .testimonials-clean .intro p {
-    margin-bottom:0;
-  }
-  
-  .testimonials-clean .people {
-    padding:50px 0 20px;
-  }
-  
-  .testimonials-clean .item {
-    margin-bottom:32px;
-  }
-  
-  @media (min-width:768px) {
+}
+
+.testimonials-clean .intro {
+    font-size: 16px;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.testimonials-clean .intro p {
+    margin-bottom: 0;
+}
+
+.testimonials-clean .people {
+    padding: 50px 0 20px;
+}
+
+.testimonials-clean .item {
+    margin-bottom: 32px;
+}
+
+@media (min-width:768px) {
     .testimonials-clean .item {
-      height:220px;
+        height: 220px;
     }
-  }
-  
-  .testimonials-clean .item .box {
-    padding:30px;
-    background-color:#fff;
-    position:relative;
-  }
-  
-  .testimonials-clean .item .box:after {
-    content:'';
-    position:absolute;
-    left:30px;
-    bottom:-24px;
-    width:0;
-    height:0;
-    border:15px solid transparent;
-    border-width:12px 15px;
-    border-top-color:#fff;
-  }
-  
-  .testimonials-clean .item .author {
-    margin-top:28px;
-    padding-left:25px;
-  }
-  
-  .testimonials-clean .item .name {
-    font-weight:bold;
-    margin-bottom:2px;
-    color:inherit;
-  }
-  
-  .testimonials-clean .item .title {
-    font-size:13px;
-    color:#9da9ae;
-  }
-  
-  .testimonials-clean .item .description {
-    font-size:15px;
-    margin-bottom:0;
-  }
-  
-  .testimonials-clean .item img {
-    max-width:40px;
-    float:left;
-    margin-right:12px;
+}
+
+.testimonials-clean .item .box {
+    padding: 30px;
+    background-color: #fff;
+    position: relative;
+}
+
+.testimonials-clean .item .box:after {
+    content: '';
+    position: absolute;
+    left: 30px;
+    bottom: -24px;
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-width: 12px 15px;
+    border-top-color: #fff;
+}
+
+.testimonials-clean .item .author {
+    margin-top: 28px;
+    padding-left: 25px;
+}
+
+.testimonials-clean .item .name {
+    font-weight: bold;
+    margin-bottom: 2px;
+    color: inherit;
+}
+
+.testimonials-clean .item .title {
+    font-size: 13px;
+    color: #9da9ae;
+}
+
+.testimonials-clean .item .description {
+    font-size: 15px;
+    margin-bottom: 0;
+}
+
+.testimonials-clean .item img {
+    max-width: 40px;
+    float: left;
+    margin-right: 12px;
     height: auto;
-  }
-  
-  
+}
